fixed horizontal scroll

--- a/css/contacts.css
+++ b/css/contacts.css
@@ -1,17 +1,18 @@
 .friendsall{
   width:100%;
-  height:400px;
+  height:408px;
   overflow:scroll;
+  background-color: #E6E6E6;
   white-space: nowrap;
 }
 .friends{
   display:inline-block;
-  width:250px;
   height:400px;
-  border:1px solid;
-  line-height:80px;
+  background-color: #FFFFFF;
+  border:1px solid #E6E6E6;;
+  /* line-height:80px; */
   text-align:center;
-  /* margin-bottom:4px; */
+  padding:4px;
 }
 .sfriendsall {
   display: grid;
